# authorize-api-to-api-with-spa

client/: example.env.local  package-lock.json  package.json
client/src/: App.js  index.js
server/: .flaskenv  example.env  main.py  pyproject.toml
