[tool.poetry]
name = "server"
version = "0.1.0"
description = ""
authors = ["Makoto Uju <ainehanta@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.8"
flask = "^1.1.2"
oauthlib = "^3.1.0"
python-dotenv = "^0.14.0"
expiringdict = "^1.2.1"
pyjwt = "^1.7.1"
flask-cors = "^3.0.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
